--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 
          <div class="parallax-slide second-image">
             <div class="parallax-clip">
-                <div class="fixed-parallax" style="background-image: url(https://static.vecteezy.com/system/resources/previews/003/555/301/non_2x/halloween-background-with-zombies-silhouette-in-the-graveyard-free-vector.jpg);">
+                <div class="fixed-parallax" style="background-image: url(images/galler-bg.jpg )">
                    
-                    <div class="section full-height over-hide px-4 px-sm-0 " id="afterGalleryContainer">
+                    <div class="section full-height over-hide px-4  px-sm-0 " id="afterGalleryContainer">
                         <div class="container">
                             <div class="row full-height justify-content-center" id="row">
                                 <div class="col-lg-10 col-xl-8 align-self-center padding-tb rowContent">
